--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
     </style>
 </head>
 <body>
-    <div class="game-title">psiblades1337</div>
+    <div class="game-title">Thirsty</div>
     <div class="game-board" id="gameBoard"></div>
     <div class="play-buttons-container">
         <button class="reset-button">
@@ -257,11 +257,11 @@
             <img src="play.png" alt="Play icon" style="width: 80%; height: 80%;">
         </button>
     </div>
-    <button class="return-button" onclick="location.href='https://entyludik.github.io/mainforsale/'">Вернуться</button>
+    <button class="return-button" onclick="location.href='https://entyludik.github.io/mainforsale/'">Back</button>
  <div id="notification" class="notification">
     <div class="notification-content">
-        <p class="notification-text">Игра окончена!</p>
-        <button onclick="closeNotification()">Закрыть</button>
+        <p class="notification-text">Game is over!</p>
+        <button onclick="closeNotification()">Close</button>
     </div>
 </div>
     <audio id="click-sound" src="click.mp3"></audio><!-- Звуковой эффект для воспроизведения -->
