--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <title>psiblades1337</title>
+    <title>Thirsty BOT AI</title>
     <link href="https://fonts.googleapis.com/css?family=Baloo+Thambi" rel="stylesheet">
     <style>
         @font-face {
@@ -257,7 +257,7 @@
             <img src="play.png" alt="Play icon" style="width: 80%; height: 80%;">
         </button>
     </div>
-    <button class="return-button" onclick="location.href='https://entyludik.github.io/mainforsale/'">Back</button>
+    <button class="return-button" onclick="location.href='https://sryidw.github.io/maiach/'">Back</button>
  <div id="notification" class="notification">
     <div class="notification-content">
         <p class="notification-text">Game is over!</p>
